// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EXACT: DONT show active class 1`] = `
<a
  href="/second"
  onClick={[Function]}
/>
`;

exports[`NON-EXACT: show active class 1`] = `
<a
  className="active"
  href="/first"
  onClick={[Function]}
/>
`;

exports[`STRICT: DONT show active class 1`] = `
<a
  href="/first/"
  onClick={[Function]}
/>
`;

exports[`combine with existing styles and class 1`] = `
<a
  className="foo active"
  href="/first"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "fontSize": 32,
    }
  }
/>
`;

exports[`isActive return false 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/first",
  "url": "/first",
}
`;

exports[`isActive return false 2`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
  },
  "type": "FIRST",
}
`;

exports[`isActive return false 3`] = `
<a
  href="/first"
  onClick={[Function]}
/>
`;

exports[`isActive returns true 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/first",
  "url": "/first",
}
`;

exports[`isActive returns true 2`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
  },
  "type": "FIRST",
}
`;

exports[`isActive returns true 3`] = `
<a
  className="active"
  href="/first"
  onClick={[Function]}
/>
`;

exports[`reacts to state changes (onClick) 1`] = `
<a
  href="/second/bar"
  onClick={[Function]}
/>
`;

exports[`reacts to state changes (onClick) 2`] = `
<a
  className="active"
  href="/second/bar"
  onClick={[Function]}
/>
`;

exports[`show activeStyle 1`] = `
<a
  href="/first"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`supports custom HTML tag name 1`] = `
<div
  onClick={[Function]}
/>
`;

exports[`supports custom HTML tag name in active mode 1`] = `
<div
  className="active"
  onClick={[Function]}
/>
`;

exports[`supports custom HTML tag name which is still a link 1`] = `
<a
  href="somewhere"
  onClick={[Function]}
/>
`;
